--- a/Check.SPort/Styles/ComboBoxs.xaml
+++ b/Check.SPort/Styles/ComboBoxs.xaml
@@ -34,4 +34,16 @@
         <Setter Property="md:HintAssist.Foreground" Value="AliceBlue" />
     </Style>
 
+    <Style x:Key="CB_Protocol_Style" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource MaterialDesignComboBox}">
+        <Setter Property="Width" Value="150" />
+        <Setter Property="Height" Value="50" />
+        <Setter Property="Padding" Value="12,0,10,0" />
+        <Setter Property="Background" Value="LightGray" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="BorderBrush" Value="Black" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="md:TextFieldAssist.TextFieldCornerRadius" Value="20" />
+    </Style>
+
 </ResourceDictionary>
