--- a/Check.SPort/Styles/Pages.xaml
+++ b/Check.SPort/Styles/Pages.xaml
@@ -39,11 +39,9 @@
                     <Storyboard>
                         <DoubleAnimation Storyboard.TargetProperty="Opacity" 
                                          Duration="0:0:1" 
-                                         From="0" 
-                                         To="1" />
+                                         From="0" To="1" />
                         <DoubleAnimation Storyboard.TargetProperty="RenderTransform.(TranslateTransform.Y)"
-                                         From="50"
-                                         To="0"
+                                         From="50" To="0"
                                          Duration="0:0:0.8"
                                          DecelerationRatio="0.6"/>
                     </Storyboard>
