--- a/Check.SPort/View/SettingsView.xaml
+++ b/Check.SPort/View/SettingsView.xaml
@@ -143,7 +143,7 @@
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
 
-                                    <RadioButton Content="Serial" GroupName="ConnType" IsChecked="{Binding SettingReg.IsSeriale}" />
+                                    <RadioButton Content="Serial" GroupName="ConnType" IsChecked="{Binding IsSerial}" />
 
                                     <ComboBox Grid.Column="1"
                                               md:HintAssist.Hint="Select Name Port"
@@ -151,7 +151,9 @@
                                               SelectedValue="{Binding SettingReg.SerialPort.PortName}"
                                               Style="{StaticResource FilledComboBox_2}"/>
 
-                                    <Button Grid.Column="2" Style="{StaticResource BtnSearchCOM_Style}"/>
+                                    <Button Grid.Column="2" 
+                                            Command="{Binding SearchPortCOMCommand}"
+                                            Style="{StaticResource BtnSearchCOM_Style}"/>
                                 </Grid>
 
 
@@ -165,8 +167,7 @@
 
                                     <RadioButton Content="Ethernet" 
                                                  GroupName="ConnType" 
-                                                 Style="{StaticResource MaterialDesignUserForegroundRadioButton}"
-                                                 IsChecked="{Binding SettingReg.IsEthernet}" />
+                                                 IsChecked="{Binding IsEthernet}" />
                                     
                                     <TextBox x:Name="TxtIpAdress" Grid.Column="1" 
                                              Text="{Binding SettingReg.EthernetSettings.IpAddress}" 
@@ -187,32 +188,18 @@
                                 </Grid>
 
                                 <ComboBox Grid.Row="2" 
-                                          SelectedValue="{Binding SettingReg.Protocollo}">
-                                    <ComboBoxItem Content="Custom" IsSelected="True" />
-                                    <ComboBoxItem Content="XonXoff" />
-
-                                    <ComboBox.Style>
-                                        <Style TargetType="{x:Type ComboBox}" BasedOn="{StaticResource MaterialDesignComboBox}">
-                                            <Setter Property="Width" Value="150" />
-                                            <Setter Property="Height" Value="50" />
-                                            <Setter Property="Padding" Value="12,0,10,0" />
-                                            <Setter Property="Background" Value="LightGray" />
-                                            <Setter Property="BorderThickness" Value="2" />
-                                            <Setter Property="BorderBrush" Value="Black" />
-                                            <Setter Property="VerticalAlignment" Value="Center" />
-                                            <Setter Property="HorizontalAlignment" Value="Center" />
-                                            <Setter Property="md:TextFieldAssist.TextFieldCornerRadius" Value="20" />
-                                        </Style>
-                                    </ComboBox.Style>
-                                </ComboBox>
+                                          ItemsSource="{Binding ProtocolConnections}"
+                                          SelectedValue="{Binding SelectedProtocolConnection}"
+                                          Style="{StaticResource CB_Protocol_Style}" />
                             </Grid>
                         </md:Card>
 
                         <UniformGrid Rows="1" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" Margin="0,10">
-                            <Button Command="{Binding RefreshSerialSettingsCommand}" Style="{StaticResource BtnRefreshSetting_Style}" />
+                            <Button Command="{Binding ResetSettingsCommand}" Style="{StaticResource BtnRefreshSetting_Style}" />
 
                             <Button Command="{Binding SaveCommand}" Style="{StaticResource BtnSaveSetting_Style}" />
                         </UniformGrid>
+
                     </Grid>
                 </Grid>
             </Grid>
