--- a/Check.SPort/MainWindow.xaml
+++ b/Check.SPort/MainWindow.xaml
@@ -18,8 +18,7 @@
         WindowStyle="None"
         ResizeMode="CanResizeWithGrip"
         Background="Transparent"
-        x:Name="ResponsiveWindow"
-        Opacity="0">
+        x:Name="ResponsiveWindow">
 
     <Window.DataContext>
         <vm:NavigationViewModel />
@@ -28,7 +27,7 @@
     <Window.RenderTransform>
         <ScaleTransform x:Name="RootGridScale" ScaleX="1" ScaleY="1" />
     </Window.RenderTransform>
-    
+
     <Window.Resources>
         <Storyboard x:Key="WindowEnterStoryboard" Completed="Storyboard_Completed">
             <!-- Width -->
@@ -42,7 +41,7 @@
 
             <!-- Opacità -->
             <DoubleAnimation
-                Storyboard.TargetName="ResponsiveWindow"
+                Storyboard.TargetName="GridAnimation"
                 Storyboard.TargetProperty="Opacity"
                 From="0" To="1"
                 Duration="0:0:2" />
@@ -76,7 +75,7 @@
 
             <!-- Opacità -->
             <DoubleAnimation
-                Storyboard.TargetName="ResponsiveWindow"
+                Storyboard.TargetName="GridAnimation"
                 Storyboard.TargetProperty="Opacity"
                 From="1" To="0"
                 Duration="0:0:1" />
@@ -96,7 +95,7 @@
     </Window.Resources>
 
     <Grid>
-        
+
         <!--// Window Border //-->
         <Border Background="#212529" CornerRadius="20,00,0,20" BorderThickness="5" BorderBrush="#3A4149" />
 
@@ -117,7 +116,7 @@
                         <RowDefinition Height="90*" />
                         <RowDefinition Height="200*" />
                     </Grid.RowDefinitions>
-                    
+
                     <!--// Grid for the Menu Toggle Button //-->
                     <DockPanel>
 
@@ -239,7 +238,7 @@
                 </Grid>
             </Grid>
 
-            <Grid Grid.Column="1">
+            <Grid Grid.Column="1" x:Name="GridAnimation" Opacity="0">
 
                 <md:Snackbar x:Name="MainSnackbar"
                              MessageQueue="{x:Static util:SnackbarService.SnackbarMessageQueue}"
@@ -251,7 +250,7 @@
                              Margin="0"
                              Background="#272B2F"
                              Foreground="Goldenrod" />
-                
+
                 <ContentControl Content="{Binding CurrentViewModel}" />
 
             </Grid>
@@ -292,7 +291,7 @@
             <Button Grid.Column="2" Grid.Row="1" x:Name="MaxApp" Style="{StaticResource MaxAppStyle}" Command="{Binding MaxAppCommand}" CommandParameter="{Binding ElementName=ResponsiveWindow}" />
             <Button Grid.Column="3" Grid.Row="1" x:Name="CloseApp" Style="{StaticResource ExitApp}" Command="{Binding CloseAppCommand}" CommandParameter="{Binding ElementName=ResponsiveWindow}"/>
         </Grid>
-
+        
     </Grid>
 
 </Window>
