--- a/Check.SPort/Styles/Buttons.xaml
+++ b/Check.SPort/Styles/Buttons.xaml
@@ -92,7 +92,7 @@
     </Style>
 
     <Style x:Key="SendButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource MaterialDesignRaisedButton}">
-        <Setter Property="Margin" Value="10" />
+        <Setter Property="Margin" Value="10,5" />
         <Setter Property="Width" Value="75" />
         <Setter Property="Height" Value="55" />
         <Setter Property="Cursor" Value="Hand" />
@@ -115,14 +115,44 @@
                             <Setter Property="Background" TargetName="BorderBtn" Value="Gray" />
                         </Trigger>
                     </ControlTemplate.Triggers>
-                    
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="FileButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource MaterialDesignRaisedButton}">
+        <Setter Property="Margin" Value="10,5" />
+        <Setter Property="Width" Value="75" />
+        <Setter Property="Height" Value="55" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+
+                    <Border x:Name="BorderBtn" Background="DarkTurquoise" BorderThickness="2" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="7" >
+                        <md:PackIcon x:Name="BtnSend" Kind="FileCode" Width="30" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black" />
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="UIElement.IsMouseOver" Value="True">
+                            <Setter Property="Background" TargetName="BorderBtn" Value="Turquoise" />
+                            <Setter Property="BorderBrush" TargetName="BorderBtn" Value="Gray" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="FrameworkElement.Cursor" Value="No" />
+                            <Setter Property="UIElement.Opacity" Value="0.38" />
+                            <Setter Property="Background" TargetName="BorderBtn" Value="Gray" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
     <Style x:Key="OpenBtnStyle" TargetType="{x:Type Button}">
-        <Setter Property="Margin" Value="10" />
+        <Setter Property="Margin" Value="10,5" />
         <Setter Property="Width" Value="75" />
         <Setter Property="Height" Value="70" />
         <Setter Property="Cursor" Value="Hand" />
@@ -135,7 +165,7 @@
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-                            
+
                             <TextBlock x:Name="TestoButton" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" FontWeight="Bold" />
                             <ToggleButton x:Name="TB" 
                                           Width="20" 
@@ -144,12 +174,7 @@
                                           Grid.Row="1"
                                           Style="{StaticResource MaterialDesignActionAccentToggleButton}" 
                                           IsChecked="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.IsConnection}" IsEnabled="False">
-                                <md:ToggleButtonAssist.SwitchTrackOnBackground>
-                                    <SolidColorBrush Color="DarkGreen" Opacity="0.8" />
-                                </md:ToggleButtonAssist.SwitchTrackOnBackground>
-                                <md:ToggleButtonAssist.SwitchTrackOffBackground>
-                                    <SolidColorBrush Color="LightSalmon" Opacity="0.8" />
-                                </md:ToggleButtonAssist.SwitchTrackOffBackground>
+                                <md:PackIcon Kind="Plug" Width="20" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center" />
                             </ToggleButton>
                         </Grid>
                     </Border>
