--- a/Check.SPort/Styles/Pages.xaml
+++ b/Check.SPort/Styles/Pages.xaml
@@ -49,4 +49,6 @@
             </EventTrigger>
         </Style.Triggers>
     </Style>
+
+    <DropShadowEffect x:Key="ShadowDepth8" Color="#FF606060" Direction="270" ShadowDepth="8" BlurRadius="10" Opacity="0.7" />
 </ResourceDictionary>
